<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.d0pam1n.doorphone.ui.AboutActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="30dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp"
            android:paddingTop="20dp"
            android:text="@string/about_project_name"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/about_version_title"
            android:textColor="@color/cardview_dark_background" />

        <TextView
            android:id="@+id/about_project_version"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:text="@string/about_license_title"
            android:textColor="@color/cardview_dark_background" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/about_project_license" />

        <TextView
            android:id="@+id/about_repository"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:text="@string/about_link_repository"
            android:textColor="@color/cardview_dark_background" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:text="@string/about_title_bugs"
            android:textColor="@color/cardview_dark_background" />

        <TextView
            android:id="@+id/about_report_bug"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/about_link_bugs" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginTop="30dp"
            android:background="@color/cardview_dark_background" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp"
            android:paddingTop="20dp"
            android:text="@string/about_title_author"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/about_author"
            android:textColor="@color/cardview_dark_background" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/about_author_git_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:text="@string/about_title_mail"
            android:textColor="@color/cardview_dark_background" />

        <TextView
            android:id="@+id/about_author_mail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/about_author_mail" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginTop="30dp"
            android:background="@color/cardview_dark_background" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp"
            android:paddingTop="20dp"
            android:text="@string/about_title_libs"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/about_lib_pjsip"
            android:textColor="@color/cardview_dark_background" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/about_lib_pjsip_license" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:text="@string/about_lib_libvlc"
            android:textColor="@color/cardview_dark_background" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/about_lib_libvlc_license" />
    </LinearLayout>

</ScrollView>
