<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:inputType="text"
        android:key="setting_sip_host"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/settings_sip_host_title" />

    <EditTextPreference
        android:inputType="text"
        android:key="setting_sip_username"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/settings_sip_username_title" />

    <EditTextPreference
        android:inputType="textPassword"
        android:key="setting_sip_password"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/settings_sip_password_title" />

    <EditTextPreference
        android:inputType="text"
        android:key="setting_sip_realm"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/settings_sip_realm_title" />

    <EditTextPreference
        android:inputType="number"
        android:key="setting_sip_port"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/settings_sip_port_title" />

    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/settings_sip_transport_values"
        android:entryValues="@array/settings_sip_transport_values"
        android:key="setting_sip_transport"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/settings_sip_transport_title" />
</PreferenceScreen>